<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" 
    android:background="#ebebeb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
	android:id="@+id/rootView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

        <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="120dp">
	
	    <ImageView
		android:src="@drawable/overlay"
		android:minWidth="25px"
		android:minHeight="25px"
		android:scaleType="fitXY"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/imageView1"/>

	</LinearLayout>

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minWidth="25px"
	    android:minHeight="25px"
	    android:id="@+id/linearLayout1">

	    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="23dp"
		android:text="@string/app_name"
		android:textSize="50dp"
		android:textColor="@android:color/white"
		android:fontFamily="cursive"
		android:id="@+id/textView2"
		android:layout_gravity="center_horizontal"/>

	    <TextView
		android:text="بِسْمِ اللّٰهِ الرَحْمِٰنِ الرَحِيمِ"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:textColor="@android:color/white"
		android:id="@+id/textView3"/>

	    
	    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp">

	        <ImageButton
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_arrow_left"
		    android:layout_centerVertical="true"
		    android:background="#00000000"
		    android:id="@+id/dayBefore"/>
	    
	        <ImageButton
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_arrow_right"
		    android:layout_alignParentEnd="true"
		    android:layout_centerVertical="true"
		    android:background="#00000000"
		    android:id="@+id/dayAfter"/>

	        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Medium Text"
		    android:textSize="22sp"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:lines="1"
		    android:ellipsize="end"
		    android:layout_centerHorizontal="true"
		    android:id="@+id/hijriDate"/>

	    
	        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Medium Text"
		    android:textSize="18sp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:lines="1"
		    android:ellipsize="end"
		    android:layout_below="@id/hijriDate"
		    android:layout_centerHorizontal="true"
		    android:id="@+id/date"/>

	    </RelativeLayout>

	    <TextClock
		android:layout_marginLeft="80dp"
		android:layout_marginRight="80dp"
		android:layout_marginTop="15dp"
		android:gravity="center_horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:background="@drawable/btndesign"
		android:fontFamily="sans-serif"
		android:textSize="40dp"
		android:drawablePadding="-100dp"
		android:id="@+id/clock"/>

	    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next_prayer"
		android:textSize="22sp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:lines="1"
		android:ellipsize="end"
		android:layout_gravity="center_horizontal"
		android:id="@+id/nextPrayer"/>

	    <HorizontalScrollView
		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="match_parent">
	
	        <TableLayout
		    android:paddingBottom="10sp"
		    android:paddingStart="20sp"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_marginTop="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginLeft="20dp"
		    android:layout_gravity="center">

		    <TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="35sp"
			    android:text="@string/prayer_heading"
			    android:lines="1"
			    android:ellipsize="end"
			    android:gravity="start"/>

			<View
			    android:layout_height="0dp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="35sp"
			    android:lines="1"
			    android:ellipsize="end"
			    android:gravity="center_horizontal"
			    android:text="@string/start_heading"/>

		    </TableRow>
	
		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_fajr"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/fajr"
			    android:gravity="start"/>

		        <View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/fajr_start" />

		    </TableRow>

		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_sunrise"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/sunrise"
			    android:gravity="start" />

		        <View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/sunrise_start"/>

		    </TableRow>
	
		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_dhuhr"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/dhuhr"
			    android:gravity="start" />

		        <View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/dhuhr_start"/>

		    </TableRow>

		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_asr"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/asr"
			    android:gravity="start" />

		        <View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/asr_start"/>

		    </TableRow>

		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_maghrib"
			    android:drawablePadding="10dp"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/maghrib"
			    android:gravity="start" />

		        <View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/maghrib_start"/>

		    </TableRow>

		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:drawableEnd="@drawable/icon_isha"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:text="@string/isha"
			    android:gravity="start" />

			
			<View
			    android:layout_height="0sp"
			    android:layout_width="30sp" />

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:text="00:00"
			    android:id="@+id/isha_start"/>

		    </TableRow>

		    <TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/midnight"
			    android:textSize="@dimen/timing"
			    android:gravity="start" />

		        <View
			    android:layout_height="0dp"
			    android:layout_width="30sp" />
		    
		        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="00:00"
			    android:textSize="@dimen/timing"
			    android:gravity="center_horizontal"
			    android:id="@+id/midnight_start"/>

		    </TableRow>

		</TableLayout>

	    </HorizontalScrollView>

	</LinearLayout>

    </RelativeLayout>

</ScrollView>
